--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@
 
 .orange {
   width: 100%;
-  height: 125px;
+  height: 75px;
   background-color: #E9896A;
 }
 
@@ -13,13 +13,13 @@
   align-items: center;
   justify-content: flex-end;
   width: 100%;
-  height: 125px;
+  height: 75px;
   background-color: #387C6D;
   box-shadow: 0px -4px 4px 0px rgba(0, 0, 0, 0.25);
   text-align: right;
   color: #F8F5F1;
   font-family: Montserrat;
-  font-size: 48px;
+  font-size: 36px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -27,7 +27,7 @@
 }
 
 .green p {
-  margin-right: 16px;
+  margin-right: 72px;
 }
 
 .blue {
@@ -35,13 +35,13 @@
   justify-content: flex-end;
   align-items: center;
   width: 100%;
-  height: 125px;
+  height: 75px;
   background-color: #343F56;
   box-shadow: 0px -4px 4px 0px rgba(0, 0, 0, 0.25);
   text-align: right;
   color: #F8F5F1;
   font-family: Montserrat;
-  font-size: 48px;
+  font-size: 36px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -49,7 +49,7 @@
 }
 
 .blue p {
-  margin-right: 16px;
+  margin-right: 72px;
 }
 
 .aboutMe {
@@ -77,9 +77,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-top: 20px solid #E9896A;
-  border-bottom: 20px solid #E9896A;
+  border-top: 10px solid #E9896A;
+  border-bottom: 10px solid #E9896A;
   padding: 64px;
+  width: 819px;
 }
 
 .cs1Image {
@@ -155,7 +156,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 75%;
+  width: 800px;
 }
 
 .csImageHolder {
