--- a/css/shared-style.css
+++ b/css/shared-style.css
@@ -1,5 +1,6 @@
 body {
   background-color: #f8f5f1;
+  margin: 0px;
 }
 
 header {
@@ -36,7 +37,7 @@ h1 {
 
 .navigation {
   width: auto;
-  padding: 1%;
+  padding: 32px 40px 32px 72px;
   display: flex;
   align-items: baseline;
 }
@@ -51,7 +52,7 @@ h1 {
 .topnav a {
   color: #343F56;
   text-align: center;
-  padding: 18px 31px;
+  padding: 18px 32px;
   text-decoration: none;
   font-size: 18px;
   font-family: 'Trirong';
